Ram17Compiler/test_programs/lexer/pass/pass9.ram17
/* Skip this comment */
class Test9 {
    public static void main(String[] a) {
        integer bool_integer = 17;
        bool flag = bool_integer;
        this.return;
    }
}

