Ram17Compiler/test_programs/lexer/fail/fail8.ram17
@author fraziermatthew
public class Failing
{
	public static void main(String a[])
	{
		print(Hello world);

	}
}
// Fails because of the @ sign in the annotation